<resources>
    <string name="app_name">TicTacToe</string>
    <string name="x_score">X Score: </string>
    <string name="o_score">O Score: </string>
    <string name="_0">0</string>
    <string name="_0Score">0</string>
    <string name="player_o">Player O</string>
    <string name="choose_your_player">Choose A Player</string>
    <string name="player_x">Player X</string>
    <string name="reset">Replay</string>
    <string name="change_to_5">Change to 5</string>
    <string name="play_with_computer">Play with Computer</string>
    <string name="play_with_a_friend">Play with a Friend</string>
    <string name="programmer">Onayemi Abdulmaleek Babajide</string>
    <string name="version">v 1.0</string>
    <string name="computerScore">Computer:</string>
    <string name="humanScore">You:</string>
    <string name="change_to_3">Change To 3</string>
    <string name="yourScore">You:</string>
</resources>
