<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="1dp"
    android:orientation="vertical"
    tools:context="com.example.android.tictactoe.ComputerGame">



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/playerX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="20sp"
            android:text="@string/player_x"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_player"
            android:textColor="@color/colorPrimary"

            />

        <RadioButton
            android:id="@+id/playerO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/player_o"
            />

    </RadioGroup>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:text="@string/x_score"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/playerX_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="130dp"
            android:textSize="20sp"
            android:textColor="#f50a0a"
            android:text="@string/_0"
            android:layout_marginEnd="130dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginRight="10dp"
            android:textColor="#22c989"
            android:textSize="20sp"
            android:text="@string/o_score"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/playerO_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#f50a0a"
            android:text="@string/_0" />




    </LinearLayout>
</LinearLayout>