<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context="com.example.android.tictactoe.HumanPlayer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_player"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textColor="#fc0808"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/playerX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="20sp"
            android:text="@string/player_x"
            android:layout_marginEnd="5dp" />



        <RadioButton
            android:id="@+id/playerO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="150dp"
            android:text="@string/player_o"
            android:layout_marginStart="150dp" />

    </RadioGroup>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:text="@string/x_score"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/playerX_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="130dp"
            android:textSize="20sp"
            android:textColor="#f50a0a"
            android:text="@string/_0"
            android:layout_marginEnd="130dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="3dp"
            android:textColor="#22c989"
            android:textSize="20sp"
            android:text="@string/o_score"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="3dp" />

        <TextView
            android:id="@+id/playerO_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#f50a0a"
            android:text="@string/_0" />




    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:weightSum="3">

            <Button

                android:id="@+id/button1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3">

            <Button
                android:id="@+id/button7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"

                android:textSize="40sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />


        </LinearLayout>
    </LinearLayout>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#260eff"
            android:text="@string/reset"
            style="?android:attr/borderlessButtonStyle"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/show5"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentRight="true"
            android:text="@string/change_to_5"
            style="?android:attr/borderlessButtonStyle"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>
